# finance

./: docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: ai_categorize.py  category_utils.py  config.py  db_migrate.py  db_reinit.py  docker_init.py  main.py  models.py  obligation_dedup.py  obligation_helpers.py  obligation_import.py  obligation_match.py  payee_utils.py  schemas.py  seed_import_templates.py  statement_parser.py
backend/app/routes/: accounts_extra.py  accounts_transactions.py  import_plan_rules.py  obligation_groups.py  obligation_import.py  obligation_occurrences.py  obligations.py  settings.py  subresources.py  transactions.py  transactions_helpers.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_baseline.py  4811131e840e_add_obligation_direction_and_occurrence_.py  754a2769136d_add_category_merge_alias.py  d1201df0f1f8_add_obligation_group_and_occurrence_.py  eae3e0b50af2_add_obligations.py  ff8f44fe98ae_add_payee_merge_alias.py
backend/tests/: test_ai_categorize.py  test_obligation_groups.py  test_obligation_import.py  test_obligation_matching.py  test_obligations.py  test_statement_parser.py
backend/tests/fixtures/: obligations_sample.csv  santander_extrato_sample.csv
frontend/: Dockerfile  vite.config.ts
frontend/src/: App.tsx
frontend/src/contexts/: DisplaySettingsContext.tsx  NavigationContext.tsx
frontend/src/pages/: Accounts.tsx  CSVTemplates.tsx  Categories.tsx  Home.tsx  ImportObligations.tsx  Obligations.tsx  Payees.tsx  Reports.tsx  (+2 more)
(+6 files in other folders)
